src/patches/cfltk_1_5_23/cfl.h

typedef struct Fl_Widget Fl_Widget;
typedef struct Fl_Widget_Tracker Fl_Widget_Tracker;
void Fl_repeat_timeout(double t, void (*)(void *), void *);
void Fl_remove_timeout(void (*)(void *), void *);
int Fl_has_timeout(void (*)(void *), void *);
int Fl_dnd(void);
void *Fl_grab(void);
void Fl_set_grab(void *);
void *Fl_first_window(void);
void *Fl_next_window(const void *);
void *Fl_modal(void);
int Fl_should_program_quit(void);
void Fl_program_should_quit(int flag);
int Fl_event_inside(int, int, int, int);
Fl_Widget *Fl_belowmouse(void);
void Fl_set_belowmouse(Fl_Widget *w);
void Fl_delete_widget(Fl_Widget *w);
Fl_Widget_Tracker *Fl_Widget_Tracker_new(Fl_Widget *w);
int Fl_Widget_Tracker_deleted(Fl_Widget_Tracker *self);
void Fl_Widget_Tracker_delete(Fl_Widget_Tracker *self);
void Fl_init_all(void);
void Fl_redraw(void);
int Fl_event_shift(void);
int Fl_event_ctrl(void);
int Fl_event_command(void);
int Fl_event_alt(void);
void Fl_set_damage(int flag);
int Fl_damage(void);
int Fl_visual(int);
void Fl_own_colormap(void);
Fl_Widget *Fl_pushed(void);
Fl_Widget *Fl_focus(void);
void Fl_set_focus(void *);
double Fl_version(void);
int Fl_api_version(void);
int Fl_abi_version(void);
int Fl_load_font(const char *path);
void Fl_unload_font(const char *path);
void Fl_foreground(unsigned char r, unsigned char g, unsigned char b);
void Fl_background(unsigned char r, unsigned char g, unsigned char b);
void Fl_background2(unsigned char r, unsigned char g, unsigned char b);
void Fl_selection_color(unsigned char r, unsigned char g, unsigned char b);
void Fl_inactive_color(unsigned char r, unsigned char g, unsigned char b);
void Fl_get_system_colors(void);
int Fl_handle(int, void *);
int Fl_handle_(int, void *);
void Fl_add_idle(void (*)(void *), void *);
int Fl_has_idle(void (*)(void *), void *);
void Fl_remove_idle(void (*)(void *), void *);
void Fl_add_check(void (*)(void *), void *);
int Fl_has_check(void (*)(void *), void *);
void Fl_remove_check(void (*)(void *), void *);
void Fl_flush(void);
void Fl_set_screen_scale(int n, float val);
float Fl_screen_scale(int n);
int Fl_screen_scaling_supported(void);
int Fl_screen_count(void);
int Fl_screen_num(int x, int y);
int Fl_screen_num_inside(int x, int y, int w, int h);
void Fl_screen_xywh(int *X, int *Y, int *W, int *H, int n);
void Fl_screen_xywh_at(int *X, int *Y, int *W, int *H, int mx, int my);
void Fl_screen_xywh_inside(
    int *X, int *Y, int *W, int *H, int mx, int my, int mw, int mh
);
void Fl_screen_xywh_mouse(int *X, int *Y, int *W, int *H);
void Fl_screen_dpi(float *h, float *v, int n);
void Fl_screen_work_area(int *X, int *Y, int *W, int *H, int n);
void Fl_screen_work_area_at(int *X, int *Y, int *W, int *H, int mx, int my);
void Fl_screen_work_area_mouse(int *X, int *Y, int *W, int *H);
void Fl_keyboard_screen_scaling(int value);
void Fl_open_display(void);
void Fl_close_display(void);
int Fl_box_dx(int boxtype);
int Fl_box_dy(int boxtype);
int Fl_box_dw(int boxtype);
int Fl_box_dh(int boxtype);
int Fl_mac_os_version(void);
void *Fl_event_clipboard(void);
const char *Fl_event_clipboard_type(void);
int Fl_clipboard_contains(const char *type);
void Fl_event_dispatch(int (*cb)(int event, void *));
unsigned int Fl_inactive(unsigned int c);
unsigned int Fl_lighter(unsigned int c);
unsigned int Fl_darker(unsigned int c);
void Fl_set_box_type_cb(
    int, void (*cb)(int, int, int, int, unsigned int), int, int, int, int
);
void Fl_set_box_type_with_focus_cb(
    int, void (*cb)(int, int, int, int, unsigned int), int, int, int, int, void (*cbf)(Fl_Boxtype, int, int, int, int, unsigned int, unsigned int)
);
int Fl_draw_box_active(void);
unsigned int Fl_gray_ramp(int i);
unsigned int Fl_color_average(unsigned int, unsigned int, float f);
void Fl_add_clipboard_notify(void (*cb)(int source, void *data), void *data);
void Fl_remove_clipboard_notify(void (*cb)(int source, void *data));
void Fl_open_callback(void (*cb)(const char *));
void Fl_set_contrast_function(unsigned int (*f)(unsigned int, unsigned int, int, int));