src/cfl.pas


  procedure Fl_repeat_timeout(t:double; _para2:Fl_ArgCallback2; _para3:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_repeat_timeout';

  procedure Fl_remove_timeout(_para1:Fl_ArgCallback2; _para2:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_remove_timeout';

  function Fl_has_timeout(_para1:Fl_ArgCallback2; _para2:pointer):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_has_timeout';

  function Fl_dnd:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_dnd';

  function Fl_grab:pointer;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_grab';

  procedure Fl_set_grab(_para1:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_grab';

  function Fl_first_window:pointer;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_first_window';

  function Fl_next_window(_para1:pointer):pointer;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_next_window';

  function Fl_modal:pointer;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_modal';

  function Fl_should_program_quit:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_should_program_quit';

  procedure Fl_program_should_quit(flag:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_program_should_quit';

  function Fl_event_inside(_para1:longint; _para2:longint; _para3:longint; _para4:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_inside';

  function Fl_belowmouse:PFl_Widget;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_belowmouse';

  procedure Fl_set_belowmouse(w: PFl_Widget);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_belowmouse';

  procedure Fl_delete_widget(w: PFl_Widget);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_delete_widget';

  function Fl_Widget_Tracker_new(w: PFl_Widget):PFl_Widget_Tracker;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_Widget_Tracker_new';

  function Fl_Widget_Tracker_deleted(self: PFl_Widget_Tracker):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_Widget_Tracker_deleted';

  procedure Fl_Widget_Tracker_delete(self: PFl_Widget_Tracker);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_Widget_Tracker_delete';

  procedure Fl_init_all;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_init_all';

  procedure Fl_redraw;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_redraw';

  function Fl_event_shift:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_shift';

  function Fl_event_ctrl:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_ctrl';

  function Fl_event_command:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_command';

  function Fl_event_alt:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_alt';

  procedure Fl_set_damage(flag:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_damage';

  function Fl_damage:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_damage';

  function Fl_visual(_para1:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_visual';

  procedure Fl_own_colormap;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_own_colormap';

  function Fl_pushed:PFl_Widget;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_pushed';

  function Fl_focus:PFl_Widget;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_focus';

  procedure Fl_set_focus(_para1:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_focus';

  function Fl_version:double;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_version';

  function Fl_api_version:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_api_version';

  function Fl_abi_version:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_abi_version';

  function Fl_load_font(path:Pchar):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_load_font';

  procedure Fl_unload_font(path:Pchar);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_unload_font';

  procedure Fl_foreground(r:byte; g:byte; b:byte);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_foreground';

  procedure Fl_background(r:byte; g:byte; b:byte);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_background';

  procedure Fl_background2(r:byte; g:byte; b:byte);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_background2';

  procedure Fl_selection_color(r:byte; g:byte; b:byte);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_selection_color';

  procedure Fl_inactive_color(r:byte; g:byte; b:byte);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_inactive_color';

  procedure Fl_get_system_colors;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_get_system_colors';

  function Fl_handle(_para1:longint; _para2:pointer):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_handle';

  function Fl_handle_(_para1:longint; _para2:pointer):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_handle_';

  procedure Fl_add_idle(_para1:Fl_ArgCallback2; _para2:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_add_idle';

  function Fl_has_idle(_para1:Fl_ArgCallback2; _para2:pointer):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_has_idle';

  procedure Fl_remove_idle(_para1:Fl_ArgCallback2; _para2:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_remove_idle';

  procedure Fl_add_check(_para1:Fl_ArgCallback2; _para2:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_add_check';

  function Fl_has_check(_para1:Fl_ArgCallback2; _para2:pointer):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_has_check';

  procedure Fl_remove_check(_para1:Fl_ArgCallback2; _para2:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_remove_check';

  procedure Fl_flush;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_flush';

  procedure Fl_set_screen_scale(n:longint; val:single);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_screen_scale';

  function Fl_screen_scale(n:longint):single;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_scale';

  function Fl_screen_scaling_supported:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_scaling_supported';

  function Fl_screen_count:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_count';

  function Fl_screen_num(x:longint; y:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_num';

  function Fl_screen_num_inside(x:longint; y:longint; w:longint; h:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_num_inside';

  procedure Fl_screen_xywh(_X: Plongint; _Y: Plongint; _W: Plongint; _H: Plongint; n:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_xywh';

  procedure Fl_screen_xywh_at(_X: Plongint; _Y: Plongint; _W: Plongint; _H: Plongint; mx:longint;my:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_xywh_at';

  procedure Fl_screen_xywh_inside(_X: Plongint; _Y: Plongint; _W: Plongint; _H: Plongint; mx:longint;my:longint; mw:longint; mh:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_xywh_inside';

  procedure Fl_screen_xywh_mouse(_X: Plongint; _Y: Plongint; _W: Plongint; _H: Plongint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_xywh_mouse';

  procedure Fl_screen_dpi(h: Psingle; v: Psingle; n:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_dpi';

  procedure Fl_screen_work_area(_X: Plongint; _Y: Plongint; _W: Plongint; _H: Plongint; n:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_work_area';

  procedure Fl_screen_work_area_at(_X: Plongint; _Y: Plongint; _W: Plongint; _H: Plongint; mx:longint;my:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_work_area_at';

  procedure Fl_screen_work_area_mouse(_X: Plongint; _Y: Plongint; _W: Plongint; _H: Plongint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_work_area_mouse';

  procedure Fl_keyboard_screen_scaling(value:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_keyboard_screen_scaling';

  procedure Fl_open_display;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_open_display';

  procedure Fl_close_display;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_close_display';

  function Fl_box_dx(boxtype:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_box_dx';

  function Fl_box_dy(boxtype:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_box_dy';

  function Fl_box_dw(boxtype:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_box_dw';

  function Fl_box_dh(boxtype:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_box_dh';

  function Fl_mac_os_version:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_mac_os_version';

  function Fl_event_clipboard:pointer;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_clipboard';

  function Fl_event_clipboard_type:Pchar;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_clipboard_type';

  function Fl_clipboard_contains(_type:Pchar):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_clipboard_contains';

  procedure Fl_event_dispatch(cb:Fl_ArgCallback3);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_dispatch';

  function Fl_inactive(c:dword):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_inactive';

  function Fl_lighter(c:dword):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_lighter';

  function Fl_darker(c:dword):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_darker';

  procedure Fl_set_box_type_cb(_para1:longint; cb:Fl_ArgCallback4; _para3:longint; _para4:longint; _para5:longint;_para6:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_box_type_cb';

  function Fl_draw_box_active:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_draw_box_active';

  function Fl_gray_ramp(i:longint):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_gray_ramp';

  function Fl_color_average(_para1:dword; _para2:dword; f:single):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_color_average';
